# rust-bot

./: .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  kovi.conf.toml  run.local
handler/: Cargo.toml
handler/src/: base.rs  group.rs  lib.rs  session.rs
md_renderer/: Cargo.toml
md_renderer/assets/: index.html
md_renderer/src/: lib.rs
plugins/ai/: Cargo.toml
plugins/ai/src/: lib.rs
plugins/hi/: Cargo.toml
plugins/hi/src/: lib.rs
src/: group_handler.rs  lib.rs  main.rs
